--- a/index.html
+++ b/index.html
@@ -7,5 +7,44 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
+    <!-- this is navbar section -->
+    <header>
+    <nav>
+        <div class="menu-container">
+            <div class="logo">
+                <img class="logophoto" src="./logo/logo-light.png" alt="">
+            </div>
+            <div class="menus">
+                <li class="item">Home</li>
+                <li class="item">Service</li>
+                <li class="item">About us</li>
+                <li class="item">Contact us</li>
+            </div>
+        </div>
+    </nav>
+    </header>
+    <!-- this main section -->
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="title">Better design for your digital product</h1>
+                    <p class="des">We are a creative studio specializing in UI/UX design, development and strategy.</p>
+                    <button class="btn">Explore more</button></div>
+                    <div class="banner-photo">
+                    <img class="img" src="./images/banner.png" alt="banner photo">
+                    </div>
+                </div>
+        </section>
+    </main>
+
+
+
+
+
+
+
+
+    <footer></footer>
 </body>
 </html>
