--- a/index.html
+++ b/index.html
@@ -36,6 +36,52 @@
                     </div>
                 </div>
         </section>
+        <!-- about section -->
+        <section>
+            <h1 class="title about-us">About us</h1>
+            <div class="about-container">
+                <div class="about-info">
+                <h2>We grow brands through
+                        bold & strategic creative</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <button class="btn">Contact us</button>
+                </div>
+                <div class="about-photo">
+                    <img class="img" src="./images/section.png" alt="ss">
+                </div>
+            </div>
+        </section>
+        <!-- Our Service's section -->
+        <section>
+            <div class="our">
+            <h1 class="title about-us">Our Service</h1>
+            <div class="service-container">
+                <div class="box">
+                    <img class="icon" src="./icon/0.png" alt="0">
+                    <h2 class="box-title">Web Developer</h2>
+                    <p class="box-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa, optio accusamus odit excepturi quasi in soluta a iste vero odio deserunt quo natus neque. Minima voluptate beatae nam odio.</p>
+                    <button class="btn">Read more</button>
+                </div>
+                <div class="box">
+                    <img class="icon" src="./icon/0.png" alt="0">
+                    <h2 class="box-title">Web Developer</h2>
+                    <p class="box-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa, optio accusamus odit excepturi quasi in soluta a iste vero odio deserunt quo natus neque. Minima voluptate beatae nam odio.</p>
+                    <button class="btn">Read more</button>
+                </div>
+                <div class="box">
+                    <img class="icon" src="./icon/0.png" alt="0">
+                    <h2 class="box-title">Web Developer</h2>
+                    <p class="box-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa, optio accusamus odit excepturi quasi in soluta a iste vero odio deserunt quo natus neque. Minima voluptate beatae nam odio.</p>
+                    <button class="btn">Read more</button>
+                </div>
+            </div>
+            </div>
+        </section>
+        <!-- foot section -->
+        <section>
+            
+        </section>
     </main>
 
 
