--- a/index.html
+++ b/index.html
@@ -1,96 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css.css" />
+  </head>
+  <body>
     <!-- this is navbar section -->
     <header>
-    <nav>
+      <nav>
         <div class="menu-container">
-            <div class="logo">
-                <img class="logophoto" src="./logo/logo-light.png" alt="">
-            </div>
-            <div class="menus">
-                <li class="item">Home</li>
-                <li class="item">Service</li>
-                <li class="item">About us</li>
-                <li class="item">Contact us</li>
-            </div>
+          <div class="logo">
+            <img class="logophoto" src="./logo/logo-light.png" alt="" />
+          </div>
+          <div class="menus">
+            <li class="item">Home</li>
+            <li class="item">Service</li>
+            <li class="item">About us</li>
+            <li class="item">Contact us</li>
+          </div>
         </div>
-    </nav>
+      </nav>
     </header>
     <!-- this main section -->
     <main>
-        <section>
-            <div class="banner-container">
-                <div class="banner-text">
-                    <h1 class="title">Better design for your digital product</h1>
-                    <p class="des">We are a creative studio specializing in UI/UX design, development and strategy.</p>
-                    <button class="btn">Explore more</button></div>
-                    <div class="banner-photo">
-                    <img class="img" src="./images/banner.png" alt="banner photo">
-                    </div>
-                </div>
-        </section>
-        <!-- about section -->
-        <section>
-            <h1 class="title about-us">About us</h1>
-            <div class="about-container">
-                <div class="about-info">
-                <h2>We grow brands through
-                        bold & strategic creative</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
-                Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                <button class="btn">Contact us</button>
-                </div>
-                <div class="about-photo">
-                    <img class="img" src="./images/section.png" alt="ss">
-                </div>
+      <section>
+        <div class="banner-container">
+          <div class="banner-text">
+            <h1 class="title">Better design for your digital product</h1>
+            <p class="des">
+              We are a creative studio specializing in UI/UX design, development
+              and strategy.
+            </p>
+            <button class="btn">Explore more</button>
+          </div>
+          <div class="banner-photo">
+            <img class="img" src="./images/banner.png" alt="banner photo" />
+          </div>
+        </div>
+      </section>
+      <!-- about section -->
+      <section>
+        <h1 class="title about-us">About us</h1>
+        <div class="about-container">
+          <div class="about-info">
+            <h2>We grow brands through bold & strategic creative</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum
+              dolor sit amet consectetur adipisicing.
+            </p>
+            <button class="btn">Contact us</button>
+          </div>
+          <div class="about-photo">
+            <img class="img" src="./images/section.png" alt="ss" />
+          </div>
+        </div>
+      </section>
+      <!-- Our Service's section -->
+      <section>
+        <div class="our">
+          <h1 class="title about-us">Our Service</h1>
+          <div class="service-container">
+            <div class="box">
+              <img class="icon" src="./icon/0.png" alt="0" />
+              <h2 class="box-title">Web Developer</h2>
+              <p class="box-description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic
+                ipsa, optio accusamus odit excepturi quasi in soluta a iste vero
+                odio deserunt quo natus neque. Minima voluptate beatae nam odio.
+              </p>
+              <button class="btn">Read more</button>
             </div>
-        </section>
-        <!-- Our Service's section -->
-        <section>
-            <div class="our">
-            <h1 class="title about-us">Our Service</h1>
-            <div class="service-container">
-                <div class="box">
-                    <img class="icon" src="./icon/0.png" alt="0">
-                    <h2 class="box-title">Web Developer</h2>
-                    <p class="box-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa, optio accusamus odit excepturi quasi in soluta a iste vero odio deserunt quo natus neque. Minima voluptate beatae nam odio.</p>
-                    <button class="btn">Read more</button>
-                </div>
-                <div class="box">
-                    <img class="icon" src="./icon/0.png" alt="0">
-                    <h2 class="box-title">Web Developer</h2>
-                    <p class="box-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa, optio accusamus odit excepturi quasi in soluta a iste vero odio deserunt quo natus neque. Minima voluptate beatae nam odio.</p>
-                    <button class="btn">Read more</button>
-                </div>
-                <div class="box">
-                    <img class="icon" src="./icon/0.png" alt="0">
-                    <h2 class="box-title">Web Developer</h2>
-                    <p class="box-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa, optio accusamus odit excepturi quasi in soluta a iste vero odio deserunt quo natus neque. Minima voluptate beatae nam odio.</p>
-                    <button class="btn">Read more</button>
-                </div>
+            <div class="box">
+              <img class="icon" src="./icon/0.png" alt="0" />
+              <h2 class="box-title">Web Developer</h2>
+              <p class="box-description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic
+                ipsa, optio accusamus odit excepturi quasi in soluta a iste vero
+                odio deserunt quo natus neque. Minima voluptate beatae nam odio.
+              </p>
+              <button class="btn">Read more</button>
             </div>
+            <div class="box">
+              <img class="icon" src="./icon/0.png" alt="0" />
+              <h2 class="box-title">Web Developer</h2>
+              <p class="box-description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic
+                ipsa, optio accusamus odit excepturi quasi in soluta a iste vero
+                odio deserunt quo natus neque. Minima voluptate beatae nam odio.
+              </p>
+              <button class="btn">Read more</button>
             </div>
-        </section>
-        <!-- foot section -->
-        <section>
-            
-        </section>
+          </div>
+        </div>
+      </section>
+      <!-- foot section -->
+      <section></section>
     </main>
 
+    <footer>
+      <div class="footer-section">
+        <div class="logo-box">
+          <img src="/logo/logo-light.png" alt="" />
+          <p>
+            Auctor blandit dolorem primis eius odit soluta molestie? Malesuada
+            elementum aut doloremque labo.
+          </p>
+          <div class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+        </div>
+        <div class="Useful-links">
+          <h3 class="footer-title">Useful Links</h3>
 
-
-
-
-
-
-
-    <footer></footer>
-</body>
+          <p>About us</p>
+          <p>Careers</p>
+          <p>News & Artciles</p>
+          <p>legal Notice</p>
+        </div>
+        <div class="Useful-links">
+            <h3 class="footer-title">Supports</h3>
+  
+            <p>About us</p>
+            <p>Careers</p>
+            <p>News & Artciles</p>
+            <p>legal Notice</p>
+          </div>
+          <div class="Useful-links">
+            <h3 class="footer-title">Contact Information</h3>
+  
+            <p>Feel free to contact & reach us !!</p>
+            <p>3557 Derek Drive, Orlando, Florida</p>
+            <p>+1(456)657-887</p>
+            <p>info@domain.com</p>
+          </div>
+      </div>
+      <p class="foc">Copyright © 2022 Agence. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
